# polymarket-alpha-bot

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
backend/: pyproject.toml
backend/core/positions/: __init__.py  service.py  storage.py
backend/core/trading/: executor.py
backend/core/wallet/: contracts.py  manager.py  storage.py
backend/server/: main.py
backend/server/routers/: __init__.py  portfolio_prices.py  position_actions.py  positions.py  trading.py  wallet.py
cli/: __init__.py  config.py  main.py  script_registry.py  utils.py
cli/commands/: fetch.py  run.py  serve.py
core/: __init__.py  models.py  runner.py  state.py
core/steps/: __init__.py  alpha.py  embeddings.py  entities.py  fetch.py  prepare.py  quality.py  relations.py  semantics.py
experiments/: 01_fetch_events.py  02_prepare_nlp_data.py  03_1_extract_entities.py  03_2_dedupe_entities.py  03_3_normalize_entities.py  03_4_extract_relations.py  04_1_extract_event_semantics.py  04_2_embed_events.py  04_3_cluster_events.py  05_0_enrich_quality.py  05_1_block_candidate_pairs.py  05_2_classify_structural.py  05_3_classify_causal.py  05_4_build_relation_graph.py  06_1_compute_conditionals.py  06_2_detect_alpha.py  06_3_export_opportunities.py
experiments/trading/: 04_transfer_tokens.py
frontend/: next.config.js  package-lock.json  package.json  server.js  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: OpportunityCard.tsx  PortfolioModal.tsx  PriceFlash.tsx  PriceProvider.tsx  Sidebar.tsx  StatusCard.tsx
frontend/hooks/: usePrices.ts  (+2 more)
server/: __init__.py  main.py
(+14 files in other folders)
