[project]
name = "alphapoly-v1"
version = "0.1.0"
description = "Polymarket alpha detection pipeline with CLI and web UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "gliner2>=1.2.3",
    "glirel>=1.2.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "polars>=1.36.1",
    "python-dotenv>=1.2.1",
    "pyvis>=0.3.2",
    "rapidfuzz>=3.14.3",
    "sentence-transformers>=5.2.0",
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    # API
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "websockets>=12.0",
    "watchfiles>=0.21.0",
    # Export
    "jinja2>=3.1.0",
]

[project.scripts]
poly = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "server", "core"]
