[project]
name = "alphapoly-backend"
version = "0.1.0"
description = "Polymarket alpha detection API and ML pipeline"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    # Console output
    "rich>=13.0.0",
    # API
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "websockets>=12.0",
    "watchfiles>=0.21.0",
    # Trading (experiments)
    "eth-account>=0.13.7",
    "py-clob-client>=0.34.5",
    "web3>=7.14.0",
    "cryptography>=46.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "core"]
